style.css
@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
    --text-color: #1a1c20;
    --main-color: #1B6CA8;
    --background-color: #eeeff1;
    --main-font: 'Poppins', sans-serif;
    --secondary-font: 'Inter', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--background-color);
}

h1 {
    font-family: var(--main-font);
}

p {
    font-family: var(--secondary-font);
    font-weight: 300;
}

/* hero section  */

.myImage img {
    border: 1px solid grey;
}

.header-section {
    padding: 0 25%;
    display: flex;
    justify-content: center;
    padding: 0 50px;
    margin: 50px 0;
    gap: 15px;
}

.intro .introduction h1 {
    /* font-size: 50px; */
    font-size: 2.5em;
    font-weight: 500;
    
}

.intro .introduction p {
    font-weight: 300;
    line-height: normal;
    font-size: 1.25em;
    letter-spacing: 10%;
}

.socials img{
    display: inline-block;
    margin: 10px 10px 10px 0;
}

.contact-details {
    display: flex;
    margin: 10px 0;
    justify-content: space-between;
}
.header {
    font-weight: 500;
}

.desc {
    font-size: 12px;
}

.contacts {
    margin: 0 10px;
}

.message-section .message {
    padding: 5px 20px;
    background-color: var(--main-color);
    font-family: var(--secondary-font);
    color: white;
    font-family: 'Poo';
}

/* tech stacks */
.techStack{
    margin: 100px 0;
}

.description {
    text-align: center;
}

.description h2 {
    font-size: 30px;
}

.list-stacks {
    margin: 20px 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.list-stacks ul{
    list-style-type: none;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.list-stacks ul li {
    border: 1px solid grey;
    padding: 10px 50px;
    border-radius: 5px;
    margin: 10px 10px;
}


/* dekstop */
@media (max-width: 1250px) {
    
}
     
                        

/* laptops */

@media (max-width: 1024px) {
    /* body {
        padding: 0 5%;
    } */
}

/* tablets */
@media (max-width: 870px) {
    .myImage img {
        height: 180px;
        width: 180px;
    }

    .intro .introduction h1 {
    /* font-size: 50px; */
        font-size: 2em;
        font-weight: 500;
    }

    .intro .introduction p {
        font-weight: 300;
        line-height: normal;
        font-size: 1em;
        letter-spacing: 10%;
    }

    .socials img {
        height: 24px;
        width: 24px;
    }

    .header {
        font-weight: 500;
        font-size: 16px;
    }

    .desc {
        font-size: 10px;
    }
}


@media (max-width: 768px) {
    .myImage img {
        height: 150px;
        width: 150px;
    }

    .intro .introduction h1 {
    /* font-size: 50px; */
        font-size: 1.75em;
        font-weight: 500;
    }

    .intro .introduction p {
        font-weight: 300;
        line-height: normal;
        font-size: .75em;
        letter-spacing: 10%;
    }

    .socials img {
        height: 16px;
        width: 16px;
    }

    .header {
        font-weight: 500;
        font-size: 14px;
    }

    .desc {
        font-size: 8px;
    }

    @media (max-width: 640px) {
        .header-section {
            padding: 0 5%;
            
        }
    }
}
    

